# MathTastic

./: APPROACH.md  LEARNING.md  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/app/: firebase_admin.py
backend/app/controllers/: userControllers.py
backend/app/lib/: db.py
backend/app/models/: activity.py  badge.py  game.py  progress.py  user.py
backend/app/routers/: activities.py  badges.py  games.py  progression.py  users.py
backend/app/schemas/: activity_schema.py  badge_schema.py  game_schema.py  progress_schema.py  user_schema.py
backend/app/utils/: helpers.py
backend/tests/integration/routers/: test_activities.py  test_games.py  test_users.py
backend/tests/unit/routers/: test_users.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/: AppSidebar.vue  HelloWorld.vue  NavMain.vue  NavUser.vue
frontend/src/composables/: auth.ts
frontend/src/config/: axiosConfig.ts  firebaseConfig.ts
frontend/src/lib/: helpers.ts
frontend/src/router/: index.ts
frontend/src/services/: AuthService.ts  FireStoreService.ts  GameService.ts  SoundService.ts
frontend/src/stores/: authStore.ts  authentication.ts  balanceScale.ts
frontend/src/types/: activity.ts  game.ts  miscellaneous.ts  progress.ts  user.ts
frontend/src/views/: AboutView.vue  AdminView.vue  AllGames.vue  (+2 more)
(+45 files in other folders)
