[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie[srv]>=1.29.0",
    "fastapi[srv,standard]>=0.115.11",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uuid>=1.30",
]
